2012-07-06 Roman
- FIX:DAQ.System: SCSI disks ("sdXN") and MD (mirror device) processing is fixed for HDDStat and HDDSmart.


2012-07-05 Roman
- FIX:DAQ.System: Possible crash at inconsistency types size "unsigned int"(32) and scanf "%lu" (unsigned long, 64) on x86_64 is fixed.
    Speed value forming is fixed for counters wrap consider.
- SYS: Cycles lost counter is added to task statistic.


2012-07-03 Roman
- DAQ, DAQ.JavaLikeCalc, UI.QTCfg, UI.Vision: Attribute "font" is added to syntax highlight rules root node for set default font config.
    Default font for JavaLikeCalc programms is set to "Courier".
- FIX:LibsDB.vcaBase: DAQ parameters check is fixed for "Parameters selection dialog for graphics".


2012-07-01 Roman
- Archive: Data combining mode selection is added for combining data from the high resolution buffer to
    the low resolution archivator. Implemented combining modes: "Moving average", "Single", "Minimum", "Maximum".
    Combining mode "Moving average" has implemented for Boolean type by weight 0.5.


2012-06-29 Roman
- DAQ:Data active flag is added to a parameter and an attribute of DAQ by function dataActive().
- !:FIX:Archive: Restore value archive's starting on set by function setSrcMode().
    Fix archives enabling for active data sources.
    Archiving data on active mode is made only for active data source, for restoring archives at start from reserve allow.
    New path type to archiving source processing error is fixed for holes data fill from reserve at request.
- DAQ.SoundCard: Check for allowed samplerates and placing it to combo is added.


2012-06-25 Roman
- FIX:Protocol.HTTP: Incomplete HTTP header processing is added, observed on packages from SSL transport.


2012-06-23 Roman
- TConfig: Exceptions processing is added to cfgChange() for revert changes.
- Transport.Serial: Exit from data mode command is added (typical "+++") which used first, next PreInit timeout and next HangUp.